--- a/DotnetFinancialTrackerApp/Components/Pages/TransactionDetails.razor
+++ b/DotnetFinancialTrackerApp/Components/Pages/TransactionDetails.razor
@@ -120,7 +120,7 @@
     else
     {
         <div class="error-section">
-            <MudIcon Icon="@Icons.Material.Filled.Error" Size="Size.Large" Color="Color.Error" />
+            <MudIcon Icon="@Icons.Material.Filled.Error" Size="Size.Large" Color="Color.Default" Style="color: black;" />
             <MudText Typo="Typo.h6" Class="mt-2">Transaction Not Found</MudText>
             <MudText Typo="Typo.body2" Class="mb-3">The transaction you're looking for doesn't exist.</MudText>
             <MudButton Variant="Variant.Filled"
