wait to complete the wellbeing saving feature

--- a/DotnetFinancialTrackerApp/Components/Dialogs/QuickActionsDialog.razor
+++ b/DotnetFinancialTrackerApp/Components/Dialogs/QuickActionsDialog.razor
@@ -92,7 +92,7 @@
 
     private void NavigateToReports()
     {
-        Nav.NavigateTo("/insights");
+        Nav.NavigateTo("/reports");
         Dialog.Close();
     }
 
